Fixed flexbox not wrapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,7 @@ body.loaded .header.title:after {
   display: -ms-flexbox;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .center-card {
